Prevent cropping images in the images elemnent for any responsive mode but desktop.
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/themes/upfront@15068 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/elements/upfront-maps/css/edit.css
+++ b/elements/upfront-maps/css/edit.css
@@ -27,6 +27,10 @@
   width: 180px;
 }
 
+.ufpront-maps_element-settings_panel .upfront-field-select {
+	width: 100%;
+}
+
 .ufm-context-menu{
 background:white;
 -webkit-border-radius: 3px;
